--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Recipe Card Collector</title>
+		<title>Recipe Cards</title>
 	</head>
 	<body>
-		<h1>Recipe Card Collector</h1>
+		<h1>Recipe Cards</h1>
 		<div id="root"></div>
 
 		<!-- script for webpack -->
